--- a/Julia/PDE_Additive.ipynb
+++ b/Julia/PDE_Additive.ipynb
@@ -5483,15 +5483,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.5",
-   "language": "julia",
-   "name": "julia-1.8"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
-   "name": "julia",
-   "version": "1.8.5"
+   "name": "python",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
