--- a/Python/PDE_Additive_python.ipynb
+++ b/Python/PDE_Additive_python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "01045c25-2d86-4f9a-b4f9-4b49271b425a",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d0b816a4-d29e-4dbd-a808-804765a550d2",
    "metadata": {},
    "outputs": [],
@@ -745,7 +745,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "intro_to_ml",
    "language": "python",
    "name": "python3"
   },
@@ -759,7 +759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
